
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int s ;


 int AF_INET ;
 int SOCK_STREAM ;
 int bzero (struct sockaddr_in*,int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit_ (int,char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int progressbar () ;
 int socket (int ,int ,int ) ;

int connect_(char *ip, int port)
{
  int sock;
  struct sockaddr_in s;

  (void) progressbar();
  if ((sock = socket(AF_INET, SOCK_STREAM, 0)) < 0)
    (void) exit_(1, "[-] socket()\n");
  bzero(&s, sizeof(s));
  s.sin_family = AF_INET;
  s.sin_port = htons(port);
  s.sin_addr.s_addr = inet_addr(ip);
  if (connect(sock, (struct sockaddr *)&s, sizeof(s)) < 0)
    (void) exit_(1, "[-] connect()\n");
  return (sock);
}
